<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:tool="http://schemas.android.com/tools">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:id="@+id/movie_detail_layout"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/movie_title_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="36dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    >
                <TextView
                    android:id="@+id/movie_title"
                    android:textSize="@dimen/movie_title_text_size"
                    android:gravity="center"
                    style="@style/MovieDetailStyle"

                    />
                </LinearLayout>
                <View
                    style="@style/LineSeparatorStyle"
                    android:id="@+id/title_separator"
                    android:layout_below="@+id/movie_title_layout"
                />

                <RelativeLayout
                    android:id="@+id/movie_image_overview_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/title_separator"
                    >
                    <LinearLayout
                        android:id="@+id/image_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/movie_image"
                            android:contentDescription="@string/movie_poster_content_description"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"/>
                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"

                            >
                            <TextView
                                android:id="@+id/movie_release"
                                android:textSize="@dimen/movie_rating_size"
                                android:textColor="@color/colorPrimaryText"
                                android:textStyle="italic"
                                android:layout_centerHorizontal="true"
                                android:gravity="center"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                tool:text="Released on 2016-08-09"

                                  />
                            <Button
                                android:id="@+id/movie_favourite"
                                android:layout_below="@+id/movie_release"
                                android:text="@string/add_to_favourite"
                                android:contentDescription="@string/add_movie_to_favourite_content_description"
                                android:layout_centerHorizontal="true"
                                android:gravity="center"
                                android:layout_marginTop="@dimen/element_margin"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"

                                android:drawableStart="@mipmap/ic_toggle_star"
                                android:drawableLeft="@mipmap/ic_toggle_star"

                                android:textAllCaps="false"
                                style="@style/Widget.AppCompat.Button.Colored"
                                 />

                        </RelativeLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/movie_overview"
                        android:layout_below="@+id/image_layout"
                        android:contentDescription="@string/movie_plot_content_description"
                        android:textSize="@dimen/movie_overview_text_size"
                        style="@style/MovieDetailStyle"  />
                </RelativeLayout>
                <View
                    style="@style/LineSeparatorStyle"
                    android:layout_below="@+id/movie_image_overview_layout"
                    android:id="@+id/movie_rating_separator"
                />
                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_below="@+id/movie_rating_separator"
                    android:textSize="@dimen/movie_rating_size"
                    android:contentDescription="@string/movie_rating_content_description"
                    style="@style/MovieDetailStyle"
                     />



            </RelativeLayout>


</ScrollView>

    <View
        style="@style/LineSeparatorStyle"
        android:layout_below="@+id/movie_detail_layout" />

</RelativeLayout>

